# cloudflow-plus

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: database.py  hashing.py  main.py  models.py  oauth2.py  schemas.py  socket_server.py  utils.py
backend/app/api/routers/: aws_files copy.py  aws_files.py  minio_buckets.py  minio_files.py
backend/app/core/: config.py
backend/app/routers/: authentication.py  aws_buckets.py  aws_files.py  files.py  minio_files.py  share_files.py  synchronization.py
backend/app/routers/service_based/: minio_buckets.py
backend/app/services/: s3_service.py  sync_service.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/api/: auth.api.ts  aws.api.ts  files.api.ts  minio.api.ts  share.api.ts  sync.api.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: app-layout.tsx  app-sidebar.tsx  brand-wordmark.tsx  breadcrumbs.tsx  buckets-view.tsx  client-layout.tsx  create-bucket-dialog.tsx  drag-and-drop.tsx  file-browser.tsx  file-list.tsx  file-preview.tsx  files-list.tsx  loading.tsx  logo.tsx  manage-share-dialog.tsx  settings.tsx  share-dialog.tsx  shared-links.tsx  sidebar.tsx  theme-toggle.tsx  toast-provider.tsx  toast.tsx  upload-dropzone.tsx  upload-progress.tsx
frontend/config/: api.config.ts
frontend/contexts/: auth.context.tsx  breadcrumbs.context.tsx
frontend/hooks/: use-mobile.ts
frontend/lib/: helpers.ts
frontend/types/: auth.types.ts  buckets.types.ts  files.types.ts  (+2 more)
(+43 files in other folders)
